Fix up the obvious correctable errors picked up by PMD in the "release" mad components.